feat/backend env api_key

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,4 @@ DB_NAME=agea_test
 
 X-API-KEY=dcdd234887ef
 API_ENDPOINT=https://www.googleapis.com/pagespeedonline/v5/runPagespeed
+API_KEY=AIzaSyBiQuPzwWSbV9JrIBXZ7ewp0uNthMAN6Ts
